[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ARCADEPI.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://assets/background-sky.png" type="Texture" id=2]
[ext_resource path="res://assets/button-text.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/title-text.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 269.0
margin_bottom = 145.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Control" parent="."]
margin_left = 4.0
margin_top = 28.0
margin_right = 4.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleShadow" type="Label" parent="Title"]
margin_left = 59.0
margin_top = 38.0
margin_right = 271.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Nectar Collector"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleText" type="Label" parent="Title"]
margin_left = 58.0
margin_top = 25.0
margin_right = 270.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.87451, 0.443137, 0.14902, 1 )
text = "Nectar Collector"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 130.0
margin_top = 106.0
margin_right = 173.0
margin_bottom = 122.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialButton" type="Button" parent="."]
margin_left = 121.0
margin_top = 120.0
margin_right = 182.0
margin_bottom = 140.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "Tutorial"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 130.0
margin_top = 138.0
margin_right = 172.0
margin_bottom = 154.0
focus_mode = 0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.85098, 0.627451, 0.4, 1 )
custom_colors/font_color_hover = Color( 0.933333, 0.764706, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 0.87451, 0.443137, 0.14902, 1 )
enabled_focus_mode = 0
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
